fixed no scrollbar on blogposts + increased font sizes

--- a/CSS/blogPost.scss
+++ b/CSS/blogPost.scss
@@ -34,7 +34,6 @@ main {
     flex-wrap: wrap;
 
     padding: 37.5px 0 37.5px 0;
-    font-size: 16px;
     width: 100%;
     box-shadow: inset 15px 15px 30px $shadow-dark,
       inset -15px -15px 30px $shadow-light;
