--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -21,15 +21,15 @@ body {
 
 h1,
 h2 {
-  font-weight: 100;
+  font-weight: 110;
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 3.3em;
 }
 
 h2 {
-  font-size: 2.5em;
+  font-size: 2.75em;
 }
 
 header {
@@ -39,7 +39,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    padding: 5vh;
+    padding: 5.5vh;
     padding-top: 0;
 
     .content {
@@ -54,14 +54,14 @@ header {
         list-style-type: none;
         display: flex;
         justify-content: center;
-        margin-top: 1rem;
+        margin-top: 1.1rem;
         width: 100%;
 
         a {
           text-align: center;
           color: $light-color;
           text-decoration: none;
-          padding: 0 5px 0 5px;
+          padding: 0 5.5px 0 5.5px;
         }
       }
     }
@@ -69,7 +69,7 @@ header {
 
   hr {
     background-color: #000;
-    margin: 0 5vh 0vh 5vh;
+    margin: 0 5.5vh 0vh 5.5vh;
     border-color: $tertiary-color;
   }
 }
